added about in main

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="open-sans-normal">
-    <header class= "header">
+    <header class="header second-bg">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -40,8 +40,38 @@
         </div>
     </header>
 
-    <main>
-
+    <main class="main">
+        <section class="about second-bg">
+           <div class="about-container">
+                <h3 class="about-title common-text-syntax">About Me</h3>
+                <p class="about-description dark-3">
+                    I'm a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
+                    websites that provide real value to the end user. Thousands of clients have procured exceptional results
+                    while working with me. Delivering work within time and budget which meets clients requirements in our
+                    mata.
+                </p>
+                <div class="about-items">
+                    <!-- .about-item*4>p.item-title+p.item-description -->
+                    <div class="about-item">
+                        <p class="item-title">Name:</p>
+                        <p class="item-description">Mary Hardy</p>
+                    </div>
+                    <div class="about-item">
+                        <p class="item-title">Email:</p>
+                        <p class="item-description">info@gmail.com</p>
+                    </div>
+                    <div class="about-item">
+                        <p class="item-title">Date of Birth:</p>
+                        <p class="item-description">11 November 1987</p>
+                    </div>
+                    <div class="about-item">
+                        <p class="item-title">From:</p>
+                        <p class="item-description">Los Angles, USA</p>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
