--- a/index.html
+++ b/index.html
@@ -186,7 +186,27 @@
     </main>
 
     <footer>
-
+        <section class="footer second-bg">
+            <div class="footer-column">
+                <h3 class="section-title">Let's Connect</h3>
+                <h3 class="footer-description">Please fill out the form on this section to contact with me or call
+                    between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</h3>
+                <div class="footer-icon-pic">
+                    <a href="www.facebook.com"><img src="/images/icons/facebook.png" alt=""></a>
+                    <a href="www.insta.com"><img src="/images/icons/insta.png" alt=""></a>
+                    <a href="www.twitter.com"><img src="/images/icons/twitter.png" alt=""></a>
+                </div>
+            </div>
+            <div class="footer-column">
+                <h3 class="section-title">Let’s Message me</h3>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Your Name">
+                    <input type="email" name="" id="" placeholder="Your Email">
+                    <textarea name="" id="" cols="30" rows="30" placeholder="Message"></textarea>
+                    <input class="btn-primary" type="submit" value="Submit">
+                </form>
+            </div>
+        </section>
     </footer>
 </body>
 
