added font awesome icons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="open-sans-normal">
@@ -31,8 +34,8 @@
                     Morning because as to society
                     behaved moments.
                 </p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <div class="banner-image-pic">
                 <img src="/images/hardy.png" alt="">
@@ -180,7 +183,7 @@
                 </div>
             </div>
             <div class="button-container text-center">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
     </main>
@@ -204,7 +207,7 @@
                     <input type="email" name="" id="" placeholder="Your Email">
                     <textarea name="" id="" cols="30" rows="30" placeholder="Message"></textarea>
                     <input class="btn-primary" type="submit" value="Submit">
-                </form>
+
             </div>
         </section>
     </footer>
