updated banner image

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <div class="banner-image-pic">
-                <img src="/images/hardy.png" alt="">
+                <img src="./images/hardy.png" alt="">
             </div>
         </div>
     </header>
